--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -10,11 +10,8 @@ main:
   - name: Papers
     url: /#papers
     weight: 11
-  - name: Talks
-    url: /#talks
-    weight: 12
-  - name: News
-    url: /#news
+  - name: Blog
+    url: /blog/
     weight: 13
   - name: Experience
     url: experience/
